--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
+<!--
+ * @Author: Kabuda-czh
+ * @Date: 2023-01-14 22:42:43
+ * @LastEditors: Kabuda-czh
+ * @LastEditTime: 2023-01-15 03:29:07
+ * @FilePath: \DDTV_WEBUI\index.html
+ * @Description: 
+ * 
+ * Copyright (c) 2023 by Kabuda-czh, All Rights Reserved.
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= appName %></title>
   </head>
   <body>
     <div id="app"></div>
